# MTP_LiG

./: calculator.html  cms-lab.html
Enum_li_config/: 0_Run.txt  DEVELOPMENT_HISTORY.md  DEVELOPMENT_HISTORY_init.md  (+20 more)
mlip-2-master/cblas/: CMakeLists.txt  cblas.h  cblas_daxpy.c  cblas_dgemm.c  cblas_dgemv.c  cblas_dger.c  cblas_dswap.c  cblas_f77.h  cblas_idamax.c
mlip-2-master/dev_src/: CMakeLists.txt  eam.cpp  eam.h  matvec_oper.cpp  matvec_oper.h  max_vol_saver.h  mtpr.cpp  mtpr.h  mtpr_trainer.cpp  mtpr_trainer.h  non_linear_regression.cpp  non_linear_regression.h  sample_potentials.h  sw_basis.cpp  sw_basis.h
mlip-2-master/dev_src/drivers/: cfg_generator.cpp  cfg_generator.h  elastic_const.cpp  elastic_const.h  molecular_dynamics.cpp  molecular_dynamics.h  outer_relaxation.cpp  outer_relaxation.h  relaxation_dev.cpp  relaxation_dev.h
mlip-2-master/dev_src/mlp/: CMakeLists.txt  dev_mlp_commands.cpp  dev_mlp_commands.h  dev_self_test.cpp  dev_self_test.h  mlp.cpp  mtpr_train.cpp  mtpr_train.h
mlip-2-master/dev_src/utils/: dump_to_cfgs.cpp  relax.cpp
mlip-2-master/src/: CMakeLists.txt  active_learning.cpp  active_learning.h  basic_mlip.cpp  basic_mlip.h  basic_potentials.cpp  basic_potentials.h  basic_trainer.cpp  basic_trainer.h  configuration.cpp  configuration.h  error_monitor.cpp  error_monitor.h  lammps_potential.cpp  lammps_potential.h  linear_regression.cpp  linear_regression.h  lotf.cpp  lotf.h  maxvol.cpp  maxvol.h  mlip.h  mlip_wrapper.cpp  mlip_wrapper.h  mtp.cpp  mtp.h  neighborhoods.cpp  neighborhoods.h  pair_potentials.cpp  pair_potentials.h  radial_basis.cpp  radial_basis.h  vasp_potential.cpp  vasp_potential.h
mlip-2-master/src/common/: CMakeLists.txt  bfgs.cpp  bfgs.h  matrix3.h  multidimensional_arrays.h  stdafx.cpp  stdafx.h  utils.cpp  utils.h  vector3.h
mlip-2-master/src/drivers/: basic_drivers.cpp  basic_drivers.h  relaxation.cpp  relaxation.h
mlip-2-master/src/mlp/: CMakeLists.txt  calc_errors.cpp  calc_errors.h  mlp.cpp  mlp.h  mlp_commands.cpp  mlp_commands.h  self_test.cpp  self_test.h  train.cpp  train.h
(+1221 files in other folders)
